<resources>
    <string name="app_name">XiuzhenyuanForAndroid</string>
    <string name="retrieve_password">忘记密码？</string>
    <string name="phone_icon">手机号图标</string>
    <string name="lock_icon">密码图标</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="login">登录</string>
    <string name="get_message_verification_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="close">关闭</string>
</resources>
